changed wording in index.html

--- a/index.html
+++ b/index.html
@@ -118,42 +118,42 @@
             <div class="links-grid">
                 <a href="html/2025/clash_wrapped_all.html" class="link-card">
                     <h3>All Players</h3>
-                    <p>View combined statistics</p>
+                    <p>View Combined Wrapped</p>
                 </a>
                 <a href="html/2025/clash_wrapped_Josh.html" class="link-card">
                     <img src="icons/players/Josh.png" alt="Josh" class="player-icon" onerror="this.style.display='none'">
                     <h3>Josh</h3>
-                    <p>View Josh's stats</p>
+                    <p>View Josh's Wrapped</p>
                 </a>
                 <a href="html/2025/clash_wrapped_Kevin.html" class="link-card">
                     <img src="icons/players/Kevin.png" alt="Kevin" class="player-icon" onerror="this.style.display='none'">
                     <h3>Kevin</h3>
-                    <p>View Kevin's stats</p>
+                    <p>View Kevin's Wrapped</p>
                 </a>
                 <a href="html/2025/clash_wrapped_Logan.html" class="link-card">
                     <img src="icons/players/Logan.png" alt="Logan" class="player-icon" onerror="this.style.display='none'">
                     <h3>Logan</h3>
-                    <p>View Logan's stats</p>
+                    <p>View Logan's Wrapped</p>
                 </a>
                 <a href="html/2025/clash_wrapped_Nathan.html" class="link-card">
                     <img src="icons/players/Nathan.png" alt="Nathan" class="player-icon" onerror="this.style.display='none'">
                     <h3>Nathan</h3>
-                    <p>View Nathan's stats</p>
+                    <p>View Nathan's Wrapped</p>
                 </a>
                 <a href="html/2025/clash_wrapped_Ryan.html" class="link-card">
                     <img src="icons/players/Ryan.png" alt="Ryan" class="player-icon" onerror="this.style.display='none'">
                     <h3>Ryan</h3>
-                    <p>View Ryan's stats</p>
+                    <p>View Ryan's Wrapped</p>
                 </a>
                 <a href="html/2025/clash_wrapped_Skyler.html" class="link-card">
                     <img src="icons/players/Skyler.png" alt="Skyler" class="player-icon" onerror="this.style.display='none'">
                     <h3>Skyler</h3>
-                    <p>View Skyler's stats</p>
+                    <p>View Skyler's Wrapped</p>
                 </a>
                 <a href="html/2025/clash_wrapped_Toby.html" class="link-card">
                     <img src="icons/players/Toby.png" alt="Toby" class="player-icon" onerror="this.style.display='none'">
                     <h3>Toby</h3>
-                    <p>View Toby's stats</p>
+                    <p>View Toby's Wrapped</p>
                 </a>
             </div>
         </div>
@@ -163,42 +163,42 @@
             <div class="links-grid">
                 <a href="html/2024/clash_wrapped_all.html" class="link-card">
                     <h3>All Players</h3>
-                    <p>View combined statistics</p>
+                    <p>View Combined Wrapped</p>
                 </a>
                 <a href="html/2024/clash_wrapped_Josh.html" class="link-card">
                     <img src="icons/players/Josh.png" alt="Josh" class="player-icon" onerror="this.style.display='none'">
                     <h3>Josh</h3>
-                    <p>View Josh's stats</p>
+                    <p>View Josh's Wrapped</p>
                 </a>
                 <a href="html/2024/clash_wrapped_Kevin.html" class="link-card">
                     <img src="icons/players/Kevin.png" alt="Kevin" class="player-icon" onerror="this.style.display='none'">
                     <h3>Kevin</h3>
-                    <p>View Kevin's stats</p>
+                    <p>View Kevin's Wrapped</p>
                 </a>
                 <a href="html/2024/clash_wrapped_Logan.html" class="link-card">
                     <img src="icons/players/Logan.png" alt="Logan" class="player-icon" onerror="this.style.display='none'">
                     <h3>Logan</h3>
-                    <p>View Logan's stats</p>
+                    <p>View Logan's Wrapped</p>
                 </a>
                 <a href="html/2024/clash_wrapped_Nathan.html" class="link-card">
                     <img src="icons/players/Nathan.png" alt="Nathan" class="player-icon" onerror="this.style.display='none'">
                     <h3>Nathan</h3>
-                    <p>View Nathan's stats</p>
+                    <p>View Nathan's Wrapped</p>
                 </a>
                 <a href="html/2024/clash_wrapped_Ryan.html" class="link-card">
                     <img src="icons/players/Ryan.png" alt="Ryan" class="player-icon" onerror="this.style.display='none'">
                     <h3>Ryan</h3>
-                    <p>View Ryan's stats</p>
+                    <p>View Ryan's Wrapped</p>
                 </a>
                 <a href="html/2024/clash_wrapped_Skyler.html" class="link-card">
                     <img src="icons/players/Skyler.png" alt="Skyler" class="player-icon" onerror="this.style.display='none'">
                     <h3>Skyler</h3>
-                    <p>View Skyler's stats</p>
+                    <p>View Skyler's Wrapped</p>
                 </a>
                 <a href="html/2024/clash_wrapped_Toby.html" class="link-card">
                     <img src="icons/players/Toby.png" alt="Toby" class="player-icon" onerror="this.style.display='none'">
                     <h3>Toby</h3>
-                    <p>View Toby's stats</p>
+                    <p>View Toby's Wrapped</p>
                 </a>
             </div>
         </div>
