Updated index.html to improve layout by wrapping text elements in a flex container for better alignment and presentation.

--- a/index.html
+++ b/index.html
@@ -117,8 +117,10 @@
             <h2 class="year-title">2025</h2>
             <div class="links-grid">
                 <a href="html/2025/clash_wrapped_all.html" class="link-card">
-                    <h3>All Players</h3>
-                    <p>View Combined Wrapped</p>
+                    <div stlye="display: flex; flex-direction: column; align-items: center; justify-content: center;">
+                        <h3>All Players</h3>
+                        <p>View Combined Wrapped</p>
+                    </div>
                 </a>
                 <a href="html/2025/clash_wrapped_Josh.html" class="link-card">
                     <img src="icons/players/Josh.png" alt="Josh" class="player-icon" onerror="this.style.display='none'">
@@ -162,8 +164,10 @@
             <h2 class="year-title">2024</h2>
             <div class="links-grid">
                 <a href="html/2024/clash_wrapped_all.html" class="link-card">
-                    <h3>All Players</h3>
-                    <p>View Combined Wrapped</p>
+                    <div stlye="display: flex; flex-direction: column; align-items: center; justify-content: center;">
+                        <h3>All Players</h3>
+                        <p>View Combined Wrapped</p>
+                    </div>
                 </a>
                 <a href="html/2024/clash_wrapped_Josh.html" class="link-card">
                     <img src="icons/players/Josh.png" alt="Josh" class="player-icon" onerror="this.style.display='none'">
